// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login tests should return login page 1`] = `
<div>
  <form>
    <h1>
      Please log in
    </h1>
    <div>
      Username:
       
      <input
        value=""
      />
    </div>
    <div>
      Password:
       
      <input
        type="password"
        value=""
      />
    </div>
    <div />
    <div>
      <button>
        Log in
      </button>
    </div>
  </form>
</div>
`;

exports[`login tests should return logout page 1`] = `
<div>
  <form>
    <div>
      <h1>
        Are you sure?
      </h1>
      <button>
        Log out
      </button>
    </div>
  </form>
</div>
`;

exports[`login tests should return register page 1`] = `
<div>
  <form>
    <div>
      Username:
       
      <input
        name="username"
        value=""
      />
    </div>
    <div>
      Full name:
       
      <input
        name="fullName"
        value=""
      />
    </div>
    <div>
      Password:
       
      <input
        name=""
        type="password"
        value=""
      />
    </div>
    <div>
      <button>
        Register
      </button>
    </div>
  </form>
</div>
`;
